<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbackground"
    android:scrollbarSize="@dimen/scrollbar"
    android:scrollbarStyle="outsideInset"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top1"
            android:layout_marginEnd="@dimen/margin_End1"
            android:text="@string/title"
            android:textColor="@color/ghost_white"
            android:textSize="@dimen/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="374dp"
            android:layout_height="1060dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="249dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/middle_name_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/first_name_til">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/middle_name"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/middle_name"
                        android:inputType="textPersonName"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastname_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/middle_name_til">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/gender_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/gender"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/radioGroup_rg"
                    app:layout_constraintEnd_toStartOf="@+id/radioGroup_rg"
                    app:layout_constraintTop_toBottomOf="@+id/lastname_til" />

                <RadioGroup
                    android:id="@+id/radioGroup_rg"
                    android:layout_width="86dp"
                    android:layout_height="95dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="36dp"
                    android:checkedButton="@id/male_rb"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastname_til">

                    <RadioButton
                        android:id="@+id/male_rb"
                        android:layout_width="69dp"
                        android:layout_height="48dp"
                        android:text="@string/male"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/lastname_til" />

                    <RadioButton
                        android:id="@+id/female_rb"
                        android:layout_width="85dp"
                        android:layout_height="48dp"
                        android:text="@string/female"
                        app:layout_constraintEnd_toEndOf="@+id/last_name_et"
                        app:layout_constraintStart_toEndOf="@+id/male_rb"
                        app:layout_constraintTop_toBottomOf="@+id/lastname_til" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/age_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="@dimen/margin_top2"
                    android:layout_marginEnd="50dp"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintBottom_toBottomOf="@+id/radioGroup_rg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/radioGroup_rg"
                    app:layout_constraintTop_toBottomOf="@+id/lastname_til">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/age_et"
                        android:layout_width="75dp"
                        android:layout_height="60dp"
                        android:hint="@string/age"
                        android:inputType="number"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/spinner_card"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:cardCornerRadius="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup_rg">

                    <Spinner
                        android:id="@+id/spinner_sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner_card"
                    app:prefixText="@string/phone_prefix">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_tet"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLength="10"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mail_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_til">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_tet"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/state_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mail_til">

                    <AutoCompleteTextView
                        android:id="@+id/state_tv"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/state"
                        android:inputType="none"
                        android:labelFor="@id/state_til"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mark_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/state_til">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mark_et"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/percentage"
                        android:inputType="numberDecimal"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <Switch
                    android:id="@+id/willing_sw"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    android:text="@string/willing_to_relocate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mark_til"
                    app:showText="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passing_year_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="@dimen/box_width"
                    android:layout_height="@dimen/box_height"
                    android:layout_marginTop="@dimen/margin_top2"
                    app:boxCornerRadiusBottomEnd="@dimen/box_radius"
                    app:boxCornerRadiusBottomStart="@dimen/box_radius"
                    app:boxCornerRadiusTopEnd="@dimen/box_radius"
                    app:boxCornerRadiusTopStart="@dimen/box_radius"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/willing_sw">

                    <AutoCompleteTextView
                        android:id="@+id/year_tv"
                        android:layout_width="@dimen/box_width"
                        android:layout_height="@dimen/box_height"
                        android:hint="@string/year"
                        android:inputType="none"
                        app:hintTextColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submit_bn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top2"
                    android:layout_marginBottom="20dp"
                    android:text="@string/submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passing_year_til" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
